[project]
name = "numbertotext"
description = "Converts a number (e.g., 2 or 15) into written text (e.g., two or fifteen). Works for english and german up to numbers as high as 9999 without problems."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["num2words"]

[project.urls]
Repository = "https://github.com/MartinDeanMoriarty/ComfyUI-NumberToText"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/MartinDeanMoriarty/ComfyUI-NumberToText/wiki"
"Bug Tracker" = "https://github.com/MartinDeanMoriarty/ComfyUI-NumberToText/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-NumberToText"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

